Run STAR before bwa to boost the process

--- a/NCLscan.config
+++ b/NCLscan.config
@@ -31,6 +31,7 @@ bedtools_bin      =
 blat_bin          = 
 bwa_bin           = 
 samtools_bin      = 
+star_bin          = 
 novoalign_bin     = 
 novoindex_bin     = 
 
@@ -82,6 +83,10 @@ span_range = 50
 ###################
 ### Performance ###
 ###################
+
+## Parameters for STAR
+## The number of threads
+star_thread = 1
 
 ## Parameters for bwa mem
 ## The number of threads
