Replace bwa by STAR

--- a/NCLscan.config
+++ b/NCLscan.config
@@ -29,8 +29,8 @@ lncRNA_transcripts =
 ## External tools
 bedtools_bin      = 
 blat_bin          = 
-bwa_bin           = 
 samtools_bin      = 
+star_bin          = 
 novoalign_bin     = 
 novoindex_bin     = 
 
@@ -83,9 +83,9 @@ span_range = 50
 ### Performance ###
 ###################
 
-## Parameters for bwa mem
+## Parameters for STAR
 ## The number of threads
-bwa-mem-t = 1
+star_thread = 1
 
 ## Parameters for mp_blat.py
 ## The number of processes for running blat
